--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a proof of concept that I could achieve macro recording and accurate playbacks with python. This is my first iteration of these scripts, I'm sure that I could still improve. I could improve the recording to have less lines of text. I still think that I can improve the playback speed and accuracy, though I haven't 
+This is a proof of concept that I could achieve macro recording and accurate playbacks with python. This is my first iteration of these scripts, I'm sure that I could still improve the recording to have less lines of text, and improve the playback speed and accuracy, though I haven't 
 done as much testing as I would like to at the time of posting. 
 
 I might continually update and post new versions as I decide to continue on this project. There's currently no GUI which I would like to add at some point. 
