--- a/README
+++ b/README
@@ -1,22 +1,35 @@
-# What is this?
-This is a proof of concept that I could achieve macro recording and accurate playbacks with python. This is my first iteration of these scripts, I'm sure that I could still improve the recording to have less lines of text, and improve the playback speed and accuracy, though I haven't 
-done as much testing as I would like to at the time of posting. 
+# Macro Record + Playback V.01
+This is a proof of concept for achieving macro recording and accurate playback using Python. This is the first iteration of these scripts, designed for automating repetitive tasks through recorded input sequences.
 
-I might continually update and post new versions as I decide to continue on this project. There's currently no GUI which I would like to add at some point. 
-# How To Use (With an IDE)
-To record macros, run the "recording.py" file. Press f5 (or any other start script button in your IDE) to intiate recording.
-To end the recording press 'esc'. 
-When the 'esc' key is pressed, it saves a macro_x.json file in the "/recordings" directory thatshould have been created when ending the macro. 
+#How to Use (With an IDE)
+ ##Recording a Macro
+- Run the recording.py file in your IDE.
+- Press F5 (or the start script button in your IDE) to initiate recording.
+- Press the Esc key to stop the recording.
+- The macro will be saved as a macro_x.json file in the /recordings directory.
+ ## Playing Back a Macro
+- Open the playback.py file in your IDE.
+- Press F5 (or the start script button in your IDE) to initiate playback.
+- Playback will automatically end when the script completes. (Note: Currently, there is no key to stop playback early; this is a work in progress.)
 
-To play back a macro, open the "playback.py" file, Press f5 (or any other start script button in your IDE) to initiate playback. Unfortunately,
-I have not coded in an exit button if you want to stop the early (WIP). 
-Playback will end when the script ends.
+# Technology Used
+- Python
+- PyAutoGUI & Pynput: For simulating keyboard and mouse events.
+- JSON: For storing recorded macros.
 
-# Tech used
-- Python 
-- Pyautogui
+# Features
+- Record keystrokes
+- Record mouse button clicks
+- Record mouse movements
+- Playback all recorded keystrokes, mouse clicks, and movements
 
-Feel free to give feedback, positive or negative. 
+# To-Do List
+- Optimize Playback Accuracy: Improve the precision of macro playback to better simulate human-like behavior.
+- Optimize Recording Efficiency: Reduce the overhead and improve the performance of the recording process.
+- Implement Early Exit: Add a hotkey or method to stop playback before it completes.
+
+
+Feel free to provide feedback—positive or negative!
+
 Thanks,
-
-Macro Record + Playback V.01
+Jarod
